// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/css/macro actual-expected-usage 1`] = `
"/** @jsx jsx */
import { jsx } from '@emotion/core'
import css from '@emotion/css/macro'

const SomeComponent = () => (
  <div
    css={css\`
      color: hotpink;
    \`}
  />
)


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import { jsx } from '@emotion/core';
var _ref = {
  name: \\"1wl9j1m-SomeComponent\\",
  styles: \\"color:hotpink;label:SomeComponent;\\"
};

const SomeComponent = () => <div css={_ref} />;"
`;

exports[`@emotion/css/macro basic 1`] = `
"import css from '@emotion/css/macro'

function doThing() {
  return css\`
    display: flex;
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
var _ref = {
  name: \\"k008qs\\",
  styles: \\"display:flex;\\"
};

function doThing() {
  return _ref;
}"
`;

exports[`@emotion/css/macro call-expression 1`] = `
"import css from '@emotion/css/macro'

function doThing() {
  return css({ color: 'hotpink' })
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
var _ref = {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
};

function doThing() {
  return _ref;
}"
`;

exports[`@emotion/css/macro call-inside-call 1`] = `
"import css from '@emotion/css/macro'

const thing = css\`
  display: flex;
  &:hover {
    \${css\`
      color: hotpink;
    \`};
  }
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

const thing =
/*#__PURE__*/
_css(\\"display:flex;&:hover{\\", {
  name: \\"1hi0qos-thing\\",
  styles: \\"color:hotpink;label:thing;\\"
}, \\";}label:thing;\\");"
`;

exports[`@emotion/css/macro comment-with-interpolation 1`] = `
"import css from '@emotion/css/macro'

css\`
  // color: \${'green'};
  /* 
  
  something: \${'something'};
  
  */
  color: hotpink;
\`

css\`
  // color: \${'green'};
  /* 
  
  something: \${'something'};
  
  */
  color: \${'hotpink'};
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;

exports[`@emotion/css/macro impure 1`] = `
"import css from '@emotion/css/macro'

function thing() {}

function doThing() {
  return css\`
    display: \${thing()};
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

function thing() {}

function doThing() {
  return (
    /*#__PURE__*/
    _css(\\"display:\\", thing(), \\";\\")
  );
}"
`;

exports[`@emotion/css/macro inside-class 1`] = `
"/** @jsx jsx */
import { Component } from 'react'
import { jsx } from '@emotion/core'
import css from '@emotion/css/macro'

class SomeComponent extends Component {
  render() {
    return (
      <div
        css={css\`
          color: hotpink;
        \`}
      />
    )
  }
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import { Component } from 'react';
import { jsx } from '@emotion/core';
var _ref = {
  name: \\"1wl9j1m-SomeComponent\\",
  styles: \\"color:hotpink;label:SomeComponent;\\"
};

class SomeComponent extends Component {
  render() {
    return <div css={_ref} />;
  }

}"
`;

exports[`@emotion/css/macro label-1 1`] = `
"import css from '@emotion/css/macro'

const thing = css\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
const thing = {
  name: \\"1hi0qos-thing\\",
  styles: \\"color:hotpink;label:thing;\\"
};"
`;

exports[`@emotion/css/macro label-object 1`] = `
"import css from '@emotion/css/macro'

const thing = {
  thisShouldBeTheLabel: css\`
    color: hotpink;
  \`,
  // prettier-ignore
  'shouldBeAnotherLabel':css\`
    color:green;
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
const thing = {
  thisShouldBeTheLabel: {
    name: \\"xjpive-thisShouldBeTheLabel\\",
    styles: \\"color:hotpink;label:thisShouldBeTheLabel;\\"
  },
  // prettier-ignore
  'shouldBeAnotherLabel': {
    name: \\"lgalrw-shouldBeAnotherLabel\\",
    styles: \\"color:green;label:shouldBeAnotherLabel;\\"
  }
};"
`;

exports[`@emotion/css/macro multiple-calls 1`] = `
"import css from '@emotion/css/macro'

const thing = css\`
  color: hotpink;
\`

const otherThing = css\`
  color: green;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
const thing = {
  name: \\"1hi0qos-thing\\",
  styles: \\"color:hotpink;label:thing;\\"
};
const otherThing = {
  name: \\"onvdw0-otherThing\\",
  styles: \\"color:green;label:otherThing;\\"
};"
`;

exports[`@emotion/css/macro remove-block-comments 1`] = `
"import css from '@emotion/css/macro'

css\`
  /* color:green;
ddjfwjkng
  */
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;

exports[`@emotion/css/macro remove-line-comments 1`] = `
"import css from '@emotion/css/macro'

css\`
  // color: green;
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;
